--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -234,6 +234,8 @@
     display: flex;
     align-items: center;
     line-height: 20px;
+    position: sticky;
+    z-index: 1000;
   }
 
   footer a {
